# endcoin-program

./: .gitignore  emission.ts  package-lock.json  readme.md
dataService/: data.json  getData.py  index.js  main.py  package.json  readme.md  requirements.txt
endcoin/: .env-example  Anchor.toml  create_amm.ts  devnet_emitter.ts  emitter.ts  endpQEoonAdTFZAJCU9kEtx2Kdj4fA2bqvwVeuizF2e.json  instructions.rs  kinobi.ts  package-lock.json  package.json  swap.ts  testing_wallets.ts  tsconfig.json
endcoin/deployment/: 00_generate_keypairs.ts  02_create-metadata.ts  create-amm.ts  endcoin_create.ts  endcoin_mint.ts  utils.ts
endcoin/programs/endcoin/: Cargo.toml
endcoin/programs/endcoin/src/: ammconfig.rs  constants.rs  errors.rs  lib.rs  state.rs
endcoin/programs/endcoin/src/contexts/: claim_reward.rs  create_amm.rs  create_metadata.rs  create_mints.rs  create_pool.rs  create_reward_vault.rs  create_sst.rs  deposit_liquidity.rs  emit.rs  get_clock_directly.rs  init.rs  instructions.rs  mod.rs  pull_feed.rs  swap_exact_tokens_for_tokens.rs  switchboard.rs  utils.rs
endcoin/programs/endcoin/src/state/: config.rs
endcoin/temp/: 01_create-amm.ts  02_create-metadata.ts  04_deposit-liquidity.ts  0_switchboards_test_integration.ts  99_endcoin.ts  constants.ts  endcoin.ts  keys.json  scratch.ts
endcoin/tests/: 000_gettime.ts  00_init.ts  00_kinobi_test.ts  02_create-metadata.ts  03_create-pool.ts  0_switchboards_test_integration.ts  0_test.ts  create-amm.ts  create.ts  emit.ts  emit_30.ts  endcoin.ts  generate-clients.ts  swap.ts  utils.ts  withdraw-liquidity.ts  xx_create-metadata.ts
endcoin/tests/old/: 000_gettime.ts  (+6 more)
(+2 files in other folders)
