[package]
name = "endcoin"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "endcoin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
switchboard-solana = "0.29.88"
bytemuck = "1.14.0"
fixed = "1.23.1"
half = "2.2.1"
fixed-sqrt = "0.2.5"
solana-program = "1.17.17"
winnow = "0.5.34"
toml_datetime = "=0.6.5"
rust_decimal = "1.33"
rust_decimal_macros = "1.33"