[package]
name = "endcoin"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]
name = "endcoin"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-lang-idl = { version = "0.1.1", features = ["convert"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
spl-tlv-account-resolution = "0.6.3"
spl-transfer-hook-interface = "0.6.3"
spl-type-length-value = "0.4.3"
spl-pod = "0.2.2"
solana-program = "2.0.13"
bytemuck = "1.14.0"
fixed = "1.23.1"
half = "2.2.1"
fixed-sqrt = "0.2.5"
winnow = "0.5.34"
toml_datetime = "=0.6.5"
rust_decimal = "1.33"
rust_decimal_macros = "1.33"